# Bid-Assistant

./: .dockerignore  .env.bidsaas.example  .gitignore  CLAUDE.md  README.md  bunfig.toml  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.bun.json  tsconfig.next.json  tsconfig.tsbuildinfo
services/agent/: Dockerfile  e2e207_seed.py  pyproject.toml
services/agent/src/agent/: app.py  checkpointer.py  config.py  db.py  main_api.py  main_worker.py  migrate.py  redis_client.py
services/agent/src/agent/dedupe/: engine.py  textsim.py
services/agent/src/agent/framework/: backend.py  base_agent.py  compressor.py  content_safety.py  create_agent.py  (+7 more)
services/agent/tests/: conftest.py  test_checklist_route.py  test_dummy_agent.py  test_executor.py  test_health.py  test_migrate.py  test_model_config.py  test_model_gateway.py  test_model_usage.py  test_models_route.py  test_readyz.py  test_recorder.py  test_runs_api.py  test_telemetry_schema.py  test_worker_group.py
services/agent/tests/dedupe/: test_dedupe_route.py  test_textsim.py
services/agent/tests/framework/: test_backend.py  test_base_agent.py  test_compressor.py  test_content_safety.py  test_deepagent.py  test_forced_submit.py  test_hitl.py  test_hooks.py  test_model_stream.py  test_resilient.py  test_structured.py
services/agent/tests/parsing/: conftest.py  test_convert.py  test_media_meta.py  test_merge.py  test_parsers.py  test_read_and_parse.py
services/agent/tests/rag/: test_chunker.py  test_embedder.py  test_rag_route.py  test_retrieve.py  test_schema.py  test_store.py  test_store_integration.py  test_sweep.py
(+624 files in other folders)
