[project]
name = "bid-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic-settings>=2.5",
  "psycopg[binary,pool]>=3.2",
  "redis>=5.1",
  "httpx>=0.27",
]

[dependency-groups]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.7"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 包目录名(agent)与项目名(bid-agent)不同 + src 布局，需显式告知 hatchling。
[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
