[project]
name = "bid-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic-settings>=2.5",
  "psycopg[binary,pool]>=3.2",
  "redis>=5.1",
  "httpx>=0.27",
  "langchain-openai>=1.3.3",
  "langchain-core>=1.4.8",
  "langgraph>=1.2.7",
  "langgraph-checkpoint-postgres>=3.1.0",
  "sse-starlette>=3.4.5",
  "deepagents>=0.6.12",
  "python-docx>=1.2.0",
  "pypdf>=6.14.2",
  "openpyxl>=3.1.5",
  "boto3>=1.43.38",
]

[dependency-groups]
dev = [
    "fpdf2>=2.8.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 包目录名(agent)与项目名(bid-agent)不同 + src 布局，需显式告知 hatchling。
[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
